# coop_tickets

./: Dockerfile  LICENSE  README.md  globals.py  main.py  pyproject.toml  requirements.txt
tabula_templates/: full_page_table_template.json
